# CMakeList.txt : CMake project for RCPSP-ST IG, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "RCPSP-ST IG.cpp" "RCPSP-ST IG.h")

# TODO: Add tests and install targets if needed.
