# CMakeList.txt : CMake project for RCPSP-ST IG, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "rcpsp.h" "prcpsp_ig.cpp")

# TODO: Add tests and install targets if needed.
