# CMakeList.txt : CMake project for SAT-encoding, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (SAT-encoding "SAT-encoding.cpp" "SAT-encoding.h")

# TODO: Add tests and install targets if needed.
